--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@docusaurus/preset-classic": "^2.4.3",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
+    "glob": "^11.0.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazyimg-component": "^1.0.1",
     "react-photo-view": "^1.2.6",
-    "remark-admonitions": "^1.2.1"
+    "remark-admonitions": "^1.2.1",
+    "simple-git": "^3.27.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.3"
